Enhance styles and layout for summary and reviews
Added styles for summary section, adjustment UI, and assignment review flow. Updated table layout and improved note management.

--- a/index.html
+++ b/index.html
@@ -31,17 +31,20 @@
     .tab.active { color: var(--ps-green); border-bottom: 4px solid var(--ps-green); }
     .notification-badge { position: absolute; top: -5px; right: -12px; background: var(--ps-red); color: white; border-radius: 50%; width: 18px; height: 18px; font-size: 10px; display: flex; align-items: center; justify-content: center; font-weight: 700; }
 
+    /* Summary Section */
     .summary { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 16px; margin-bottom: 32px; }
     .card { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05); border-top: 4px solid var(--ps-green); }
     .card .value { font-size: 28px; font-weight: 700; color: var(--ps-dark-green); }
     .card .label { font-size: 13px; color: #666; margin-top: 4px; font-weight: 600; }
     .risk-breakdown { font-size: 11px; color: #888; font-weight: 700; margin-top: 2px; }
+
     .summary-cap-bar { height: 6px; background: #eee; border-radius: 3px; margin-top: 8px; overflow: hidden; }
     .summary-cap-fill { height: 100%; transition: width 0.5s; }
 
     .view { display: none; }
     .view.active { display: block; }
 
+    /* My Book Styles */
     table { width: 100%; border-collapse: collapse; background: white; border-radius: 8px; overflow: visible; }
     th { background: var(--ps-green); color: white; padding: 14px; text-align: left; font-size: 12px; text-transform: uppercase; }
     td { padding: 12px; border-bottom: 1px solid #eee; font-size: 12px; vertical-align: middle; }
@@ -53,6 +56,7 @@
     .yellow { background: #fcf8e3; color: #8a6d3b; border: 1px solid #faebcc; }
     .green { background: #dff0d8; color: #3c763d; border: 1px solid #d6e9c6; }
 
+    /* Adjustment UI */
     .adj-wrapper { position: relative; }
     .adj-btn { background: #fff; border: 1px solid #ccc; padding: 6px; border-radius: 4px; cursor: pointer; font-size: 11px; width: 100%; text-align: left; display: flex; justify-content: space-between; }
     .adj-display { display: flex; flex-wrap: wrap; gap: 4px; margin-bottom: 4px; font-size: 10px; font-weight: 600; color: var(--ps-blue); }
@@ -60,7 +64,9 @@
     .adj-dropdown { display: none; position: absolute; left: 0; background: white; border: 1px solid #ddd; padding: 10px; z-index: 1000; box-shadow: 0 4px 12px rgba(0,0,0,0.1); width: 220px; border-radius: 4px; }
     .adj-dropdown.active { display: block; }
     .adj-dropdown.open-up { bottom: 100%; top: auto; margin-bottom: 5px; }
+    .adj-dropdown.open-down { top: 100%; bottom: auto; margin-top: 5px; }
 
+    /* Shared Territory/Team Layout Styles */
     .controls { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; gap: 15px; }
     .btn-action { background: white; border: 1px solid #ddd; padding: 8px 16px; cursor: pointer; font-size: 12px; font-weight: 600; border-radius: 4px; }
     .btn-action.active { background: var(--ps-green); color: white; border-color: var(--ps-green); }
@@ -81,12 +87,15 @@
     .marker { position: absolute; top: 0px; width: 1px; height: 25px; background: #bbb; z-index: 2; }
     .marker-label { position: absolute; top: -22px; font-size: 8px; font-weight: 700; color: #777; transform: translateX(-50%); text-align: center; }
     
+    .note-container { margin-top: 15px; }
+    .list-note { width: 100%; border: 1px solid #ddd; padding: 4px; border-radius: 4px; font-size: 11px; }
     textarea { width: 100%; height: 60px; border: 1px solid #ddd; border-radius: 4px; font-size: 11px; padding: 8px; resize: none; margin-top: 10px; }
     .btn-save, .btn-rotation { background: var(--ps-blue); color: white; border: none; padding: 4px 12px; border-radius: 4px; font-size: 10px; font-weight: 700; cursor: pointer; }
     .btn-rotation.off { background: #999; }
 
+    /* Assignment Review Flow */
     .review-card { background: var(--ps-light-green); border-left: 6pt solid var(--ps-green); padding: 25px; border-radius: 8px; margin-bottom: 20px; }
-    .assign-select { padding: 8px; border-radius: 4px; border: 1px solid #ccc; font-size: 12px; width: 350px; margin: 10px 0; }
+    .assign-select { padding: 8px; border-radius: 4px; border: 1px solid #ccc; font-size: 12px; width: 450px; margin: 10px 0; }
 
     footer { text-align: center; padding: 40px; color: var(--ps-dark-gray); font-size: 10px; font-weight: 600; }
   </style>
@@ -120,19 +129,23 @@
 
   <div id="view-my-book" class="view active">
     <table>
-      <thead><tr><th>Stage</th><th>Customer</th><th>Size</th><th>SIS</th><th>Health</th><th>Adjustments</th><th>Total Points</th></tr></thead>
+      <thead>
+        <tr>
+          <th>Stage</th>
+          <th>Customer</th>
+          <th>Size</th>
+          <th>SIS</th>
+          <th>Health</th>
+          <th>Adjustments</th>
+          <th>Total Points</th>
+        </tr>
+      </thead>
       <tbody id="my-deals-body"></tbody>
     </table>
   </div>
 
   <div id="view-territory" class="view">
-    <div class="controls"><h2 style="color:var(--ps-dark-green); margin:0;">Territory Load Overview</h2>
-      <div class="control-group">
-        <button id="sort-toggle-territory" class="btn-action" onclick="toggleTierSort()">Sort Tier ↑↓</button>
-        <button id="btn-grid-territory" class="btn-action" onclick="setLayout('grid')">Card View</button>
-        <button id="btn-list-territory" class="btn-action active" onclick="setLayout('list')">List View</button>
-      </div>
-    </div>
+    <div class="controls"><h2 style="color: var(--ps-dark-green); margin: 0;">Territory Load Overview</h2><div class="control-group"><button id="sort-toggle-territory" class="btn-action" onclick="toggleTierSort()">Sort Tier ↑↓</button><button id="btn-grid-territory" class="btn-action" onclick="setLayout('grid')">Card View</button><button id="btn-list-territory" class="btn-action active" onclick="setLayout('list')">List View</button></div></div>
     <div id="territory-display"></div>
   </div>
 
@@ -185,7 +198,7 @@ let myDeals = Array.from({length: 12}, (_, i) => ({
     health: i % 4 === 0 ? "yellow" : (i === 11 ? "red" : "green"), adj: []
 }));
 
-// Unified Roster (8 Territory + 15 Others)
+// Roster Data
 let imData = [
   { name: "Alex R.", tier: "T4", currentPoints: 105, dealsCount: 12, yellowRisk: 1, redRisk: 1, territory: true },
   { name: "Jordan M.", tier: "T2", currentPoints: 65, dealsCount: 9, yellowRisk: 1, redRisk: 0, territory: true },
@@ -205,9 +218,11 @@ function switchView(tabId) {
   document.querySelectorAll('.view').forEach(v => v.classList.remove('active'));
   document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
   document.getElementById('view-' + tabId).classList.add('active');
-  document.getElementById('tab-' + (tabId.includes('team') ? 'team' : tabId.includes('territory') ? 'territory' : 'my')).classList.add('active');
+  const navId = (tabId === 'total-team' ? 'team' : tabId === 'territory' ? 'territory' : 'my');
+  document.getElementById('tab-' + navId).classList.add('active');
   updateMetrics();
-  renderTabContent();
+  if (tabId === 'my-book') renderMyBook();
+  else renderTeamContent();
   if (tabId === 'total-team') renderReviewQueue();
 }
 
@@ -215,11 +230,11 @@ function updateMetrics() {
   let deals = 0, points = 0, yellow = 0, red = 0, maxPts = 0;
   let roster = currentTab === 'territory' ? imData.filter(im => im.territory) : imData;
   if (currentTab === 'my-book') {
-    myDeals.forEach(d => { points += (SIZE_PTS[d.size] + SIS_PTS[d.sis] + HEALTH_PTS[d.health] + d.adj.length); if (d.health === 'yellow') yellow++; if (d.health === 'red') red++; });
+    myDeals.forEach(d => { points += calculateTotalPoints(d); if (d.health === 'yellow') yellow++; if (d.health === 'red') red++; });
     deals = 12; maxPts = 120; document.getElementById('tier-context').innerText = "(T3)";
   } else {
     roster.forEach(im => { deals += im.dealsCount; points += im.currentPoints; yellow += im.yellowRisk; red += im.redRisk; maxPts += MPC_VALUES[im.tier]; });
-    document.getElementById('tier-context').innerText = "(Avg)";
+    document.getElementById('tier-context').innerText = "(Team Avg)";
   }
   const capPct = Math.round((points / maxPts) * 100);
   const color = capPct >= 90 ? 'var(--ps-red)' : (capPct >= 75 ? 'var(--ps-gold)' : 'var(--ps-green)');
@@ -230,11 +245,14 @@ function updateMetrics() {
   document.getElementById('summary-cap-fill').style.background = color;
 }
 
+function calculateTotalPoints(deal) { return (SIZE_PTS[deal.size] || 0) + (SIS_PTS[deal.sis] || 0) + (HEALTH_PTS[deal.health] || 0) + deal.adj.length; }
+
 function toggleAdjMenu(id, element) {
   const menu = document.getElementById(`adj-menu-${id}`);
   const rect = element.getBoundingClientRect();
-  menu.classList.remove('open-up');
+  menu.classList.remove('open-up', 'open-down');
   if (window.innerHeight - rect.bottom < 250) menu.classList.add('open-up');
+  else menu.classList.add('open-down');
   menu.classList.toggle('active');
 }
 
@@ -248,7 +266,7 @@ function renderMyBook() {
       body.innerHTML += `<tr><td colspan="7" class="stage-group-header">${deal.stage}</td></tr>`;
       currentStage = deal.stage;
     }
-    const pts = (SIZE_PTS[deal.size] + SIS_PTS[deal.sis] + HEALTH_PTS[deal.health] + deal.adj.length);
+    const pts = calculateTotalPoints(deal);
     body.innerHTML += `<tr><td>${deal.stage}</td><td><strong>${deal.name}</strong></td><td>${deal.size} (${SIZE_PTS[deal.size]})</td><td>${deal.sis} (${SIS_PTS[deal.sis]})</td><td><span class="pill ${deal.health}">${deal.health} (${HEALTH_PTS[deal.health]})</span></td>
       <td><div class="adj-wrapper"><div class="adj-display ${deal.adj.length > 2 ? 'vertical' : ''}">${deal.adj.map(a => `<span>${a} (+1)</span>`).join('')}</div>
       <div class="adj-btn" onclick="toggleAdjMenu(${deal.id}, this)">Manage ▼</div>
@@ -259,7 +277,7 @@ function renderMyBook() {
 
 function updateAdj(id, opt) { const d = myDeals.find(x => x.id === id); const idx = d.adj.indexOf(opt); idx > -1 ? d.adj.splice(idx, 1) : d.adj.push(opt); renderMyBook(); updateMetrics(); }
 
-function renderTabContent() {
+function renderTeamContent() {
   const displayId = currentTab === 'territory' ? 'territory-display' : 'team-display';
   const display = document.getElementById(displayId); if(!display) return;
   display.innerHTML = '';
@@ -268,15 +286,15 @@ function renderTabContent() {
 
   if (currentLayout === 'list') {
     const table = document.createElement('table'); table.className = 'im-list-table';
-    table.innerHTML = `<thead><tr><th>Tier</th><th>IM Name</th><th>Points</th><th>% Cap</th><th>Deals</th><th>Risk</th><th>Assignment Rotation</th><th>Notes</th><th>Action</th></tr></thead><tbody></tbody>`;
+    table.innerHTML = `<thead><tr><th>Tier</th><th>IM Name</th><th>Points</th><th>% Cap</th><th>Deals</th><th>Risk</th>${currentTab === 'total-team' ? '<th>Rotation</th>' : ''}<th>Notes</th><th>Action</th></tr></thead><tbody></tbody>`;
     display.appendChild(table);
     sorted.forEach(im => {
       const off = localStorage.getItem('rot_'+im.name) === 'off';
       const mpc = MPC_VALUES[im.tier], cap = Math.round((im.currentPoints / mpc) * 100);
       const color = cap >= 90 ? 'var(--ps-red)' : (cap >= 75 ? 'var(--ps-gold)' : 'var(--ps-green)');
       table.querySelector('tbody').innerHTML += `<tr style="${off?'opacity:0.5':''}"><td>${im.tier}</td><td><strong>${im.name}</strong></td><td>${im.currentPoints}/${mpc}</td><td><span class="status-dot" style="background:${color}"></span>${cap}%</td><td>${im.dealsCount}</td><td>${im.yellowRisk}Y/${im.redRisk}R</td>
-        <td><button class="btn-rotation ${off?'off':''}" onclick="tRot('${im.name}')">${off?'Off Rotation':'On Rotation'}</button></td>
-        <td><input type="text" class="list-note" value="${localStorage.getItem('n_'+im.name)||''}"></td><td><button class="btn-save" onclick="sNote('${im.name}',this)">Save</button></td></tr>`;
+        ${currentTab === 'total-team' ? `<td><button class="btn-rotation ${off?'off':''}" onclick="tRot('${im.name}')">${off?'Off Rotation':'On Rotation'}</button></td>` : ''}
+        <td><input type="text" class="list-note" value="${localStorage.getItem('note_'+im.name)||''}"></td><td><button class="btn-save" onclick="sNote('${im.name}',this)">Save</button></td></tr>`;
     });
   } else {
     let currentTier = ""; let grid;
@@ -290,8 +308,10 @@ function renderTabContent() {
       const mpc = MPC_VALUES[im.tier], cap = Math.round((im.currentPoints / mpc) * 100);
       const color = cap >= 90 ? 'var(--ps-red)' : (cap >= 75 ? 'var(--ps-gold)' : 'var(--ps-green)');
       grid.innerHTML += `<div class="im-card ${off?'off-rotation':''}">
-        <div style="display:flex; justify-content:space-between; align-items:center;"><strong>${im.name}</strong> <button class="btn-rotation ${off?'off':''}" onclick="tRot('${im.name}')">${off?'Off Rotation':'On Rotation'}</button></div>
-        <div style="font-size:11px; margin:8px 0;">📋 Deals: ${im.dealsCount} | ⚠️ Risk: ${im.yellowRisk+im.redRisk}</div>
+        <div style="display:flex; justify-content:space-between; align-items:center;"><strong>${im.name}</strong> 
+          ${currentTab === 'total-team' ? `<button class="btn-rotation ${off?'off':''}" onclick="tRot('${im.name}')">${off?'Off Rotation':'On Rotation'}</button>` : `<span class="pill green" style="font-size:9px;">${im.tier}</span>`}
+        </div>
+        <div style="font-size:11px; margin:8px 0;">📋 Deals: ${im.dealsCount} | ⚠️ Risk: ${im.yellowRisk + im.redRisk} (${im.yellowRisk}Y/${im.redRisk}R)</div>
         <div style="font-size:11px;">Points: <strong>${im.currentPoints}</strong> / ${mpc}</div>
         <div class="capacity-container">
           <div class="marker-label" style="left:25%">25%<br>(${Math.round(mpc*0.25)})</div><div class="marker" style="left:25%"></div>
@@ -300,7 +320,7 @@ function renderTabContent() {
           <div class="marker-label" style="left:90%">90%<br>(${Math.round(mpc*0.9)})</div><div class="marker" style="left:90%"></div>
           <div class="progress-track"><div class="progress-fill" style="width:${cap}%; background:${color}"></div></div>
         </div>
-        <textarea placeholder="Notes...">${localStorage.getItem('n_'+im.name)||''}</textarea><button class="btn-save" onclick="sNote('${im.name}',this)" style="float:right;margin-top:5px;">Save</button></div>`;
+        <div class="note-container"><textarea placeholder="Notes...">${localStorage.getItem('note_'+im.name)||''}</textarea><button class="btn-save" onclick="sNote('${im.name}',this)">Save</button></div></div>`;
     });
   }
 }
@@ -309,8 +329,8 @@ function renderReviewQueue() {
   const container = document.getElementById('review-container');
   container.innerHTML = reviewQueue.map(item => {
     const total = SIZE_PTS[item.size] + SIS_PTS[item.sis] + item.adj.length;
-    return `<div class="review-card" id="rev-${item.id}"><h3>Review: ${item.name}</h3>
-      <p style="font-size:12px;">${item.size} (${SIZE_PTS[item.size]}pts) + ${item.sis} (${SIS_PTS[item.sis]}pts)</p>
+    return `<div class="review-card" id="rev-${item.id}"><h3>Review Assignment: ${item.name}</h3>
+      <p style="font-size:12px;"><strong>Base:</strong> ${item.size} (${SIZE_PTS[item.size]}pts) + ${item.sis} (${SIS_PTS[item.sis]}pts)</p>
       <div style="margin-bottom:15px;"><label style="font-size:11px; font-weight:700;">Add Adjustments:</label><br>
         <div style="display:grid; grid-template-columns: repeat(3, 1fr); gap: 5px; margin-top:5px;">
           ${ADJ_OPTIONS.map(opt => `<label style="font-size:10px;"><input type="checkbox" onchange="upRevPts(${item.id}, '${opt}')"> ${opt} (+1)</label>`).join('')}
@@ -327,14 +347,19 @@ function renderReviewQueue() {
   document.getElementById('sub-badge').innerText = reviewQueue.length;
 }
 
-function upRevPts(id, opt) { const item = reviewQueue.find(i => i.id === id); const idx = item.adj.indexOf(opt); idx > -1 ? item.adj.splice(idx, 1) : item.adj.push(opt); document.getElementById(`rev-tot-${id}`).innerText = SIZE_PTS[item.size] + SIS_PTS[item.sis] + item.adj.length; }
+function upRevPts(id, opt) { 
+  const item = reviewQueue.find(i => i.id === id); const idx = item.adj.indexOf(opt); idx > -1 ? item.adj.splice(idx, 1) : item.adj.push(opt); 
+  document.getElementById(`rev-tot-${id}`).innerText = SIZE_PTS[item.size] + SIS_PTS[item.sis] + item.adj.length; 
+}
 function finRev(id, app) { if(app) { reviewQueue = reviewQueue.filter(i => i.id !== id); alert('Finalized.'); renderReviewQueue(); } else { document.getElementById(`rev-${id}`).style.opacity = '0.5'; } }
 function switchSubTab(sub) { document.getElementById('view-roster').style.display = sub === 'roster' ? 'block' : 'none'; document.getElementById('view-strat').style.display = sub === 'strat' ? 'block' : 'none'; document.getElementById('sub-team-roster').classList.toggle('active', sub === 'roster'); document.getElementById('sub-team-strat').classList.toggle('active', sub === 'strat'); }
-function toggleTierSort() { tierSortDir = tierSortDir === 'desc' ? 'asc' : 'desc'; renderTabContent(); }
-function setLayout(m) { currentLayout = m; renderTabContent(); }
-function tRot(n) { localStorage.setItem('rot_'+n, localStorage.getItem('rot_'+n)==='off'?'on':'off'); renderTabContent(); }
-function sNote(n,e) { localStorage.setItem('n_'+n, e.parentElement.querySelector('textarea, input').value); e.innerText = 'Saved!'; setTimeout(()=>e.innerText='Save', 1000); }
-updateMetrics(); switchView('my-book');
+function toggleTierSort() { tierSortDir = tierSortDir === 'desc' ? 'asc' : 'desc'; renderTeamContent(); }
+function setLayout(m) { currentLayout = m; renderTeamContent(); }
+function tRot(n) { localStorage.setItem('rot_'+n, localStorage.getItem('rot_'+n)==='off'?'on':'off'); renderTeamContent(); }
+function sNote(n,e) { localStorage.setItem('note_'+n, e.parentElement.querySelector('textarea, input').value); e.innerText = 'Saved!'; setTimeout(()=>e.innerText='Save', 1000); }
+
+window.onclick = e => { if (!e.target.closest('.adj-wrapper')) document.querySelectorAll('.adj-dropdown').forEach(d => d.classList.remove('active')); };
+updateMetrics(); renderMyBook();
 </script>
 </body>
 </html>
